--- a/config.json
+++ b/config.json
@@ -1,14 +1,44 @@
 [
-   {
-      "title": "CF 405",
-      "prefix": "***REMOVED***",
-      "start": "00",
-      "end": "20"
-   },
-   {
-      "title": "Linux Machines",
-      "prefix": "linux",
-      "start": "01",
-      "end": "12"
-   }
+  {
+    "title": "CF 162",
+    "prefix": "***REMOVED***",
+    "start": "00",
+    "end": "25"
+  },
+  {
+    "title": "CF 164",
+    "prefix": "***REMOVED***",
+    "start": "00",
+    "end": "25"
+  },
+  {
+    "title": "CF 414",
+    "prefix": "***REMOVED***",
+    "start": "01",
+    "end": "20"
+  },
+  {
+    "title": "CF 416",
+    "prefix": "***REMOVED***",
+    "start": "00",
+    "end": "21"
+  },
+  {
+    "title": "Cf 418",
+    "prefix": "***REMOVED***",
+    "start": "01",
+    "end": "20"
+  },
+  {
+    "title": "CF 405",
+    "prefix": "***REMOVED***",
+    "start": "01",
+    "end": "25"
+  },
+  {
+    "title": "Linux Machines",
+    "prefix": "linux",
+    "start": "01",
+    "end": "12"
+  }
 ]
