--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
     "end": "21"
   },
   {
-    "title": "Cf 418",
+    "title": "CF 418",
     "prefix": "***REMOVED***",
     "start": "01",
     "end": "20"
