Rewrote comments. Changed config.json to contain a mix of ints and strings. Changed program to use interfaces instead of map[string]string.

--- a/config.json
+++ b/config.json
@@ -2,43 +2,43 @@
   {
     "title": "CF 162",
     "prefix": "***REMOVED***",
-    "start": "00",
-    "end": "25"
+    "start": 0,
+    "end": 25
   },
   {
     "title": "CF 164",
     "prefix": "***REMOVED***",
-    "start": "00",
-    "end": "25"
+    "start": 0,
+    "end": 25
   },
   {
     "title": "CF 414",
     "prefix": "***REMOVED***",
-    "start": "01",
-    "end": "20"
+    "start": 1,
+    "end": 20
   },
   {
     "title": "CF 416",
     "prefix": "***REMOVED***",
-    "start": "00",
-    "end": "21"
+    "start": 0,
+    "end": 21
   },
   {
     "title": "CF 418",
     "prefix": "***REMOVED***",
-    "start": "01",
-    "end": "20"
+    "start": 1,
+    "end": 20
   },
   {
     "title": "CF 405",
     "prefix": "***REMOVED***",
-    "start": "01",
-    "end": "25"
+    "start": 1,
+    "end": 25
   },
   {
     "title": "Linux Machines",
     "prefix": "linux",
-    "start": "01",
-    "end": "12"
+    "start": 1,
+    "end": 12
   }
 ]
