--- a/static/config.json
+++ b/static/config.json
@@ -1,8 +1,38 @@
 [
-  {
-    "title": "CF 162",
+	{
+		"title": "CF 162",
     "prefix": "***REMOVED***",
     "start": 0,
+    "end": 25
+  },
+  {
+    "title": "CF 164",
+    "prefix": "***REMOVED***",
+    "start": 0,
+    "end": 25
+  },
+  {
+    "title": "CF 414",
+    "prefix": "***REMOVED***",
+    "start": 1,
+    "end": 20
+  },
+  {
+    "title": "CF 416",
+    "prefix": "***REMOVED***",
+    "start": 0,
+    "end": 21
+  },
+  {
+    "title": "CF 418",
+    "prefix": "***REMOVED***",
+    "start": 1,
+    "end": 20
+  },
+  {
+    "title": "CF 405",
+    "prefix": "***REMOVED***",
+    "start": 1,
     "end": 25
   },
   {
