--- a/static/config.json
+++ b/static/config.json
@@ -1,37 +1,43 @@
-[
-	{
-    "prefix": "***REMOVED***",
-    "start": 0,
-    "end": 25
-  },
-  {
-    "prefix": "***REMOVED***",
-    "start": 0,
-    "end": 25
-  },
-  {
-    "prefix": "***REMOVED***",
-    "start": 1,
-    "end": 20
-  },
-  {
-    "prefix": "***REMOVED***",
-    "start": 0,
-    "end": 21
-  },
-  {
-    "prefix": "***REMOVED***",
-    "start": 1,
-    "end": 20
-  },
-  {
-    "prefix": "***REMOVED***",
-    "start": 1,
-    "end": 25
-  },
-  {
-    "prefix": "linux",
-    "start": 1,
-    "end": 12
-  }
-]
+{
+	"interface": "localhost",
+	"port": 8080,
+	"interval": "10s",
+	"config": "./static/config.json",
+	"labsetup": [
+								{
+									"prefix": "***REMOVED***",
+									"start": 0,
+									"end": 25
+								},
+								{
+									"prefix": "***REMOVED***",
+									"start": 0,
+									"end": 25
+								},
+								{
+									"prefix": "***REMOVED***",
+									"start": 1,
+									"end": 20
+								},
+								{
+									"prefix": "***REMOVED***",
+									"start": 0,
+									"end": 21
+								},
+								{
+									"prefix": "***REMOVED***",
+									"start": 1,
+									"end": 20
+								},
+								{
+									"prefix": "***REMOVED***",
+									"start": 1,
+									"end": 25
+								},
+								{
+									"prefix": "linux",
+									"start": 1,
+									"end": 12
+								}
+							]
+}
