--- a/static/config.json
+++ b/static/config.json
@@ -2,7 +2,6 @@
 	"interface": "localhost",
 	"port": 8080,
 	"interval": "10s",
-	"config": "./static/config.json",
 	"labsetup": [
 								{
 									"prefix": "***REMOVED***",
@@ -39,5 +38,17 @@
 									"start": 1,
 									"end": 12
 								}
-							]
+							],
+	"portsetup": [
+									{
+										"name": "linux",
+										"port": ***REMOVED***,
+										"color":"MediumSeaGreen"
+									},
+									{
+										"name": "windows",
+										"port": ***REMOVED***,
+										"color": "MediumSlateBlue"
+									}
+								]
 }
