Make port string for easier use in program

--- a/config.json
+++ b/config.json
@@ -42,12 +42,12 @@
   "machineIdentifiers": [
     {
       "name": "linux",
-      "port": ***REMOVED***,
+      "port": "***REMOVED***",
       "color":"MediumSeaGreen"
     },
     {
       "name": "windows",
-      "port": ***REMOVED***,
+      "port": "***REMOVED***",
       "color": "MediumSlateBlue"
     }
   ]
