--- a/config.json
+++ b/config.json
@@ -49,6 +49,11 @@
       "name": "windows",
       "port": "***REMOVED***",
       "color": "MediumSlateBlue"
-    }
+    },
+		{
+			"name": "inaccessible",
+			"port": "",
+			"color": "gray"
+		}
   ]
 }
