--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "interface": "localhost",
   "port": "8080",
   "interval": "10s",
+	"domain":"generic-domain",
   "machineRanges": [
     {
       "prefix": "***REMOVED***",
