Remove specific lab names

--- a/config.json
+++ b/config.json
@@ -5,32 +5,32 @@
   "domain":"generic-domain",
   "machineRanges": [
     {
-      "prefix": "***REMOVED***",
+      "prefix": "labID1",
       "start": 0,
       "end": 25
     },
     {
-      "prefix": "***REMOVED***",
+      "prefix": "labID2",
       "start": 0,
       "end": 25
     },
     {
-      "prefix": "***REMOVED***",
+      "prefix": "labID3",
       "start": 1,
       "end": 20
     },
     {
-      "prefix": "***REMOVED***",
+      "prefix": "labID4",
       "start": 0,
       "end": 21
     },
     {
-      "prefix": "***REMOVED***",
+      "prefix": "labID5",
       "start": 1,
       "end": 20
     },
     {
-      "prefix": "***REMOVED***",
+      "prefix": "labID6",
       "start": 1,
       "end": 25
     },
